--- a/src/app/relapses/relapses-list.component.css
+++ b/src/app/relapses/relapses-list.component.css
@@ -1,5 +1,5 @@
 .relapses-container {
-  width: 300px;
+  width: 100%;
   height: 250px;
-  background-color: coral;
+  background-color: lightblue;
 }
