--- a/src/app/rxjs-mangling/rxjs-mangling.component.html
+++ b/src/app/rxjs-mangling/rxjs-mangling.component.html
@@ -1,120 +1,162 @@
-<div class="row">
-  <div class="col-md-6">
-    <button class="btn btn-warning" (click)="wipePrintoutExec()">Wipe toggle</button>
+<!--<div class="row" id="rx-container">-->
+<!--  <div class="col-md-9" *ngIf="showComponents; then rxjsContent"></div>-->
+<!--  <div class="col-md-3" style="background: aquamarine">-->
+<!--    ASDASDASDASDASD-->
+<!--  </div>-->
+
+<!--</div>-->
+<!--<ng-template #rxjsContent>-->
+<div class="row" id="rx-container">
+  <div class="col-md-9">
+    <div class="row">
+      <div class="col-md-6">
+        <button class="btn btn-warning" (click)="wipePrintoutExec()">Wipe toggle</button>
+      </div>
+    </div>
+    <p>BASICS</p>
+    <div class="row">
+      <div class="col-md-2">
+        <button class="btn btn-danger" (click)="createObservableExec()">Create</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-danger" (click)="scanObservableExec()">Scan</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-danger" (click)="observableFromAnythingExec()">OF</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-danger" (click)="mapObservableExec()">MAP</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-danger" (click)="switchMapObservableExec()">SwitchMap</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-danger" (click)="takeUntilObservableExec()">takeUntil</button>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-md-2">
+        <button class="btn btn-danger" (click)="firstObservableExec()">first</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-danger" (click)="takeWhileObservableExec()">takeWhile</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-danger" (click)="filterObservableExec()">filter</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-danger" (click)="zipObservableExec()">zip</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-danger" (click)="catchObservableExec()">catch Error</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-danger" (click)="retryObservableExec()">retry when error</button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-2">
+        <button class="btn btn-danger" (click)="startWithObservableStringsExec()">startWith[strings]</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-danger" (click)="startWithObservableNumbersExec()">startWith[numbers]</button>
+      </div>
+      <!--  <div class="col-md-2">-->
+      <!--    <button class="btn btn-danger" (click)="filterObservableExec()">filter</button>-->
+      <!--  </div>-->
+      <!--  <div class="col-md-2">-->
+      <!--    <button class="btn btn-danger" (click)="zipObservableExec()">zip</button>-->
+      <!--  </div>-->
+      <!--  <div class="col-md-2">-->
+      <!--    <button class="btn btn-danger" (click)="catchObservableExec()">catch Error</button>-->
+      <!--  </div>-->
+      <!--  <div class="col-md-2">-->
+      <!--    <button class="btn btn-danger" (click)="retryObservableExec()">retry when error</button>-->
+      <!--  </div>-->
+    </div>
+    <p>EVENTS</p>
+    <div class="row">
+      <div class="col-md-2">
+        <button class="btn btn-success" (click)="observableFromEventMouseClickExec()">Mouse Click</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-success" (click)="observableFromEventMouseMoveThrottleExec()">Mouse Move Throttle</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-success" (click)="observableFromEventMouseMoveDebouncedExec()">Mouse Move Debounced</button>
+      </div>
+    </div>
+    <p>ASYNC</p>
+    <div class="row">
+      <div class="col-md-2">
+        <button class="btn btn-info" (click)="observableFromPromiseExec()">From Promise</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-info" (click)="observableFromTimerExec()">From Timer</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-info" (click)="observableFromIntervalExec()">Interval</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-info" (click)="httpWithHeadersFromAPIExec()">blank</button>
+      </div>
+    </div>
+    <p>http</p>
+    <div class="row">
+      <div class="col-md-2">
+        <button class="btn btn-info" (click)="httpWithHeadersFromAPIExec()">HTTP GET - currencies / list quotes</button>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-info" (click)="httpWithHeadersFromAPIWithParamsExec()">HTTP get - from to</button>
+      </div>
+    </div>
+    <p>MIXINS with GRAPHQL (pipe)- DBS COVER scenarios</p>
+    <div class="row">
+      <div class="col-md-3">
+        <button class="btn btn-dark" (click)="multipleMapObservableExec()">Mulitiple map in pipe</button>
+      </div>
+      <div class="col-md-3">
+        <button class="btn btn-dark" (click)="observableFromPromiseExec()">MergeMap + multiple maps[undone]</button>
+      </div>
+      <div class="col-md-3">
+        <button class="btn btn-dark" (click)="multipleMapObservablePlusHttpSwitchMapExec()">map > async map (http) > map [switchMap]</button>
+      </div>
+      <div class="col-md-3">
+        <button class="btn btn-dark" (click)="multipleMapObservablePlusHttpMergeMapExec()">map > async map (http) > map [mergeMap] </button>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <button class="btn btn-dark" (click)="multipleMapObservablePlusHttpMultipleMergeMapExec()">map > async map (http) > map [2x mergeMap] </button>
+      </div>
+      <div class="col-md-3">
+        <button class="btn btn-dark" (click)="multipleMapObservableExec()">chains + pipe-childrens[undone]</button>
+      </div>
+      <div class="col-md-3">
+        <button class="btn btn-dark" (click)="observableFromPromiseExec()">asyncMergeMap + multiple asyncMaps[undone]</button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <button class="btn btn-dark" (click)="observableFromPromiseExec()">shareReplay operator + graphQl[undone]</button>
+      </div>
+      <!--  <div class="col-md-3">-->
+      <!--    <button class="btn btn-dark" (click)="observableFromPromiseExec()">MergeMap + multiple maps</button>-->
+      <!--  </div>-->
+      <!--  <div class="col-md-3">-->
+      <!--    <button class="btn btn-dark" (click)="observableFromPromiseExec()">asyncMergeMap + multiple asyncMaps</button>-->
+      <!--  </div>-->
+      <!--  <div class="col-md-3">-->
+      <!--    <button class="btn btn-dark" (click)="observableFromPromiseExec()">chains + pipe-childrens</button>-->
+      <!--  </div>-->
+    </div>
+  </div>
+  <div class="col-md-3" style="background: cornsilk" id="rxjs-logger">
+    <h3 style="border-bottom: black 2px dashed">rx-logger</h3>
   </div>
 </div>
-<p>BASICS</p>
-<div class="row">
-  <div class="col-md-2">
-    <button class="btn btn-danger" (click)="createObservableExec()">Create</button>
-  </div>
-  <div class="col-md-2">
-    <button class="btn btn-danger" (click)="scanObservableExec()">Scan</button>
-  </div>
-  <div class="col-md-2">
-    <button class="btn btn-danger" (click)="observableFromAnythingExec()">OF</button>
-  </div>
-  <div class="col-md-2">
-    <button class="btn btn-danger" (click)="mapObservableExec()">MAP</button>
-  </div>
-  <div class="col-md-2">
-    <button class="btn btn-danger" (click)="switchMapObservableExec()">SwitchMap</button>
-  </div>
-  <div class="col-md-2">
-    <button class="btn btn-danger" (click)="takeUntilObservableExec()">takeUntil</button>
-  </div>
-</div>
-<br>
-<div class="row">
-  <div class="col-md-2">
-    <button class="btn btn-danger" (click)="firstObservableExec()">first</button>
-  </div>
-  <div class="col-md-2">
-    <button class="btn btn-danger" (click)="takeWhileObservableExec()">takeWhile</button>
-  </div>
-  <div class="col-md-2">
-    <button class="btn btn-danger" (click)="filterObservableExec()">filter</button>
-  </div>
-  <div class="col-md-2">
-    <button class="btn btn-danger" (click)="zipObservableExec()">zip</button>
-  </div>
-  <div class="col-md-2">
-    <button class="btn btn-danger" (click)="catchObservableExec()">catch Error</button>
-  </div>
-  <div class="col-md-2">
-    <button class="btn btn-danger" (click)="retryObservableExec()">retry when error</button>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-2">
-    <button class="btn btn-danger" (click)="startWithObservableExec()">startWith</button>
-  </div>
-<!--  <div class="col-md-2">-->
-<!--    <button class="btn btn-danger" (click)="takeWhileObservableExec()">takeWhile</button>-->
-<!--  </div>-->
-<!--  <div class="col-md-2">-->
-<!--    <button class="btn btn-danger" (click)="filterObservableExec()">filter</button>-->
-<!--  </div>-->
-<!--  <div class="col-md-2">-->
-<!--    <button class="btn btn-danger" (click)="zipObservableExec()">zip</button>-->
-<!--  </div>-->
-<!--  <div class="col-md-2">-->
-<!--    <button class="btn btn-danger" (click)="catchObservableExec()">catch Error</button>-->
-<!--  </div>-->
-<!--  <div class="col-md-2">-->
-<!--    <button class="btn btn-danger" (click)="retryObservableExec()">retry when error</button>-->
-<!--  </div>-->
-</div>
-<p>EVENTS</p>
-<div class="row">
-  <div class="col-md-2">
-    <button class="btn btn-success" (click)="observableFromEventMouseClickExec()">Mouse Click</button>
-  </div>
-  <div class="col-md-2">
-    <button class="btn btn-success" (click)="observableFromEventMouseMoveThrottleExec()">Mouse Move Throttle</button>
-  </div>
-  <div class="col-md-2">
-    <button class="btn btn-success" (click)="observableFromEventMouseMoveDebouncedExec()">Mouse Move Debounced</button>
-  </div>
-</div>
-<p>ASYNC</p>
-<div class="row">
-  <div class="col-md-2">
-    <button class="btn btn-info" (click)="observableFromPromiseExec()">From Promise</button>
-  </div>
-  <div class="col-md-2">
-    <button class="btn btn-info" (click)="observableFromTimerExec()">From Timer</button>
-  </div>
-  <div class="col-md-2">
-    <button class="btn btn-info" (click)="observableFromIntervalExec()">Interval</button>
-  </div>
-</div>
-<p>MIXINS with GRAPHQL (pipe)- DBS COVER scenarios</p>
-<div class="row">
-  <div class="col-md-3">
-    <button class="btn btn-dark" (click)="observableFromPromiseExec()">Mulitiple map in pipe</button>
-  </div>
-  <div class="col-md-3">
-    <button class="btn btn-dark" (click)="observableFromPromiseExec()">MergeMap + multiple maps</button>
-  </div>
-  <div class="col-md-3">
-    <button class="btn btn-dark" (click)="observableFromPromiseExec()">asyncMergeMap + multiple asyncMaps</button>
-  </div>
-  <div class="col-md-3">
-    <button class="btn btn-dark" (click)="observableFromPromiseExec()">chains + pipe-childrens</button>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-3">
-    <button class="btn btn-dark" (click)="observableFromPromiseExec()">shareReplay operator + graphQl</button>
-  </div>
-<!--  <div class="col-md-3">-->
-<!--    <button class="btn btn-dark" (click)="observableFromPromiseExec()">MergeMap + multiple maps</button>-->
-<!--  </div>-->
-<!--  <div class="col-md-3">-->
-<!--    <button class="btn btn-dark" (click)="observableFromPromiseExec()">asyncMergeMap + multiple asyncMaps</button>-->
-<!--  </div>-->
-<!--  <div class="col-md-3">-->
-<!--    <button class="btn btn-dark" (click)="observableFromPromiseExec()">chains + pipe-childrens</button>-->
-<!--  </div>-->
-</div>
+
+<!--</ng-template>-->
+
